New in 4.3.1 version:

   * Effective Screening Medium (Otani and Sugino PRB 73 115407 (2006).
   * CP: faster implementation of LDA+U

Fixed in 4.3.1 version:

   * atomic: behavior of which_augfun='PSQ' made consistent with documentation
   * CP: LDA+U buggy, PLUMED wasn't working
   * Misc compilation and configure problems: line exceeding 132 characters, 
     syntax not accepted by some compilers, pathscale+mpif90 not recognized, 
     etc.
   * PW: nasty out-of-bound bug leading to mysterious crashes or 
     incorrect results in some variable-cell calculations. Also in
     variable-cell: last scf step could crash due to insufficient
     FFT grid if the final cell was larger than the initial one
   * PW: minor bug in damped dynamics (hessian matrix incorrectly reset)
   * Electron-Phonon code wasn't working any longer in serial execution
   * NEB + nonlocal exchange (DF-vdW) or hybrid functionals wasn't working
   * NEB: incorrect parsing of intermediate images fixed
   * HSE numerical problems in function expint
   * XSPECTRA wasn't working any longer due to missing updates to
     read_file_xspectra.f90
   * epsilon.f90: the term 1 must be added to diagonal components only! 

New in 4.3 version:

  * CP only, experimental: parallelization over Kohn-Sham states
  * Dispersion interactions (van der Waals) with nonlocal functional
  * Additions to projwfc: k-resolved DOS, LDOS integrated in selected
    real-space regions
  * Constant-volume variable-cell optimization
  * Non-colinear and spin-orbit PAW
  * Penalty functional technique in DFT+U calculations (CP only)

Incompatible changes in 4.3 version:

  * pw.x no longer performs NEB calculations. NEB is now computed
    by a separate code, NEB/neb.x . NEB-specific variables are no longer
    read by pw.x; they are read by neb.x after all pw.x variables
  * NEB for cp.x no longer available
  * iq1,iq2,iq3 removed from input in ph.x; use start_q, last_q instead